# KT-ITMO

./: README.md
antlr-cpp-2025-Wolf145/: Makefile
antlr-cpp-2025-Wolf145/lib/: CMakeLists.txt
antlr-cpp-2025-Wolf145/lib/include/libitmoantlr/: Translator.h
antlr-cpp-2025-Wolf145/lib/src/: Translator.cpp
antlr-cpp-2025-Wolf145/resources/: Grammar.g4
antlr-cpp-2025-Wolf145/testdata/: input-1.txt  input-2.txt  input-3.txt  input-4.txt  input-5.txt  input-6.txt  input-7.txt  input-8.txt  input-9.txt
antlr-cpp-2025-Wolf145/unittests/: tests.cpp
ct-c24-backlog-hw-factorial-Wolf145/: main  main.c
ct-c24-backlog-lw-floating-point-Wolf145/: main  main.c
ct-c24-backlog-lw-libraries-Wolf145/: main  main.c
ct-c24-backlog-lw-libraries-Wolf145/include/: my_ffmpeg.h  my_fftw.h
ct-c24-backlog-lw-libraries-Wolf145/src/: my_ffmpeg.c  my_fftw.c
ct-cpp24-backlog-hw-quaternion-Wolf145/: quat.hpp
ct-cpp24-backlog-lw-minesweeper-Wolf145/: Minefield.pro  cell.cpp  cell.h  field.cpp  field.h  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h
ds-Wolf145/: data.arff  data.csv  data.json  data.tsv  parser.ipynb  temp.txt
os-2024-networkfs-409955/: README.md  commandsToUse.txt  entrypoint.c  entrypoint.h  http.c
recursive-parsing-cpp-2025-Wolf145/: CMakeLists.txt  Makefile  input.txt  tree.dot
recursive-parsing-cpp-2025-Wolf145/src/: grammar.md  main.cpp
recursive-parsing-cpp-2025-Wolf145/src/lib/error/: Error.cpp  Error.hpp
recursive-parsing-cpp-2025-Wolf145/src/lib/expression/: Node.cpp  Node.hpp  Parser.cpp  Parser.hpp
recursive-parsing-cpp-2025-Wolf145/src/lib/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
recursive-parsing-cpp-2025-Wolf145/src/tests/: tests.cpp
recursive-parsing-cpp-2025-Wolf145/src/tests/parseResult/: ParseResult.cpp  ParseResult.hpp
